<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actionizer</name>
  <version>0.1.1</version>
  <description>Nodes that make Stan do something</description>
  <maintainer email="beaudette.david@gmail.com">David Beaudette</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend> 
  <depend>std_msgs</depend> 
  <depend>sensor_msgs</depend> 
  <depend>stan_common</depend> 
  
</package>
