<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sermonizer</name>
  <version>0.1.1</version>
  <description>Serial communication driver for Stan head to communicate with Stan base</description>
  <maintainer email="beaudette.david@gmail.com">David Beaudette</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>stan_common</depend> 
  <depend>roscpp</depend>
  
</package>
