<?xml version="1.0"?>
<package format="2">
  <name>stan_ui</name>
  <version>0.0.0</version>
  <description>Provides a user interface for Stan</description>

  <maintainer email="beaudette.david@gmail.com">David Beaudette</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
